[package]
name = "RackNRoll"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
jsonwebtoken = "8.1"
pyo3 = { version = "0.19", features = ["auto-initialize"] }
ndarray = "0.15"
image = "0.24"
chrono = { version = "0.4", features = ["serde"] }
serde_yaml = "0.9"
clap = { version = "4.0", features = ["derive"] }
actix-web = "4.0"
actix-files = "0.6"
actix-cors = "0.6"
futures = "0.3"
tokio-stream = "0.1"
lazy_static = "1.4"
urlencoding = "2.1"

[build-dependencies]
pyo3-build-config = "0.19"
